# smn_web_site

./: Cargo.toml
src/: main.rs
static/: index.html
